# Oodle

./: CMakeLists.txt  README.md
src/: DirComponent.cpp  DirInfo.cpp  DirInfo.h  FileInfo.cpp  FileInfo.h  Filter.cpp  Filter.h  Main.cpp  Pickler.cpp  Pickler.h  PicklerMode.cpp  PicklerMode.h  SortFactory.cpp  SortFactory.h  SortStrategy.cpp  SortStrategy.h
src/headers/: DirComponent.h  DirInfo.h  FileInfo.h  Pickler.h  PicklerMode.h
src/sources/: DirInfo.cpp  FileInfo.cpp  Filter.cpp  Main.cpp  Pickler.cpp  PicklerMode.cpp  SortFactory.cpp  SortStrategy.cpp
